fixed alignment of google plus. increased width of tweet button

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -93,8 +93,10 @@ input[type="url"]
     +column(3)
   .facebook
     +column(3.9)
+  .tweet
+    +column(3.5)
   *
-    vertical-align: top
+    vertical-align: top !important
 
 .button
   .icon
